force-app/main/default/objects/Capital_Requests__c/Capital_Requests__c.object-meta.xml
<CustomObject>
    <description>CFR Database</description>
    <label>Capital Request</label>
    <nameField>
        <displayFormat>REQ-{000000}</displayFormat>
        <label>Capital Requests Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Capital Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>