force-app/main/default/objects/Capital_Requests__c/fields/Additional_Notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_Notes__c</fullName>
    <description>Additional Notes and Comments</description>
    <inlineHelpText>Additional Notes and Comments</inlineHelpText>
    <label>Additional Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>