force-app/main/default/objects/Capital_Requests__c/fields/Any_resource_limitation__c.field-meta.xml
<CustomField>
    <fullName>Any_resource_limitation__c</fullName>
    <description>Any resource limitation? If Yes, please identify.</description>
    <inlineHelpText>Any resource limitation? If Yes, please identify.</inlineHelpText>
    <label>Any resource limitation?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>