force-app/main/default/objects/Capital_Requests__c/fields/Approved__c.field-meta.xml
<CustomField>
    <fullName>Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved/Rejected</label>
    <type>Checkbox</type>
</CustomField>