force-app/main/default/objects/Capital_Requests__c/fields/Approver_3__c.field-meta.xml
<CustomField>
    <fullName>Approver_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used for representing approver in Approval process</description>
    <label>Approver 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Capital_Requests5</relationshipName>
    <type>Lookup</type>
</CustomField>