force-app/main/default/objects/Capital_Requests__c/fields/Area_AVP__c.field-meta.xml
<CustomField>
    <fullName>Area_AVP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Area AVP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Capital_Requestsrice</relationshipName>
    <type>Lookup</type>
</CustomField>