force-app/main/default/objects/Capital_Requests__c/fields/As_a_result_of_this_project_will_there_b__c.field-meta.xml
<CustomField>
    <fullName>As_a_result_of_this_project_will_there_b__c</fullName>
    <description>(US Based) As a result of this project will there be new, redesigned, or refurbished merchandise that is sent to the United States from another country?</description>
    <inlineHelpText>(US Based) As a result of this project will there be new, redesigned, or refurbished merchandise that is sent to the United States from another country?</inlineHelpText>
    <label>New, Redesigned, or Refurbished?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Undecided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>