force-app/main/default/objects/Capital_Requests__c/fields/Asset_Number__c.field-meta.xml
<CustomField>
    <fullName>Asset_Number__c</fullName>
    <label>Asset Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>