force-app/main/default/objects/Capital_Requests__c/fields/Asset_Placed_in_Service_pcn__c.field-meta.xml
<CustomField>
    <fullName>Asset_Placed_in_Service_pcn__c</fullName>
    <description>Date when Asset(s) were placed in service.</description>
    <inlineHelpText>Date when Asset(s) were placed in service.</inlineHelpText>
    <label>Asset Placed in Service</label>
    <type>Date</type>
</CustomField>