force-app/main/default/objects/Capital_Requests__c/fields/Assets_Traded_Sold_Scrapped_pcn__c.field-meta.xml
<CustomField>
    <fullName>Assets_Traded_Sold_Scrapped_pcn__c</fullName>
    <description>ASSETS TRADED IN, SOLD, OR SCRAPPED AS A RESULT OF THIS PROJECT: (GIVE ASSET DESCRIPTION, TAG NUMBERS, SERIAL NUMBERS, AND ANY AMOUNTS RECEIVED)</description>
    <inlineHelpText>ASSETS TRADED IN, SOLD, OR SCRAPPED AS A RESULT OF THIS PROJECT: (GIVE ASSET DESCRIPTION, TAG NUMBERS, SERIAL NUMBERS, AND ANY AMOUNTS RECEIVED)</inlineHelpText>
    <label>Assets Traded Sold Scrapped</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>