force-app/main/default/objects/Capital_Requests__c/fields/Auto_Approve_Step_HelperField__c.field-meta.xml
<CustomField>
    <fullName>Auto_Approve_Step_HelperField__c</fullName>
    <label>Auto Approve Step HelperField</label>
    <length>100</length>
    <type>Text</type>
</CustomField>