force-app/main/default/objects/Capital_Requests__c/fields/Benefits_Risks__c.field-meta.xml
<CustomField>
    <fullName>Benefits_Risks__c</fullName>
    <label>Benefits &amp; Risks</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>