force-app/main/default/objects/Capital_Requests__c/fields/Board_Approved__c.field-meta.xml
<CustomField>
    <fullName>Board_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Fixed Assets will check to indicate Board Approval for CFR&apos;s over $10 Million</description>
    <inlineHelpText>Fixed Assets will check to indicate Board Approval for CFR&apos;s over $10 Million</inlineHelpText>
    <label>Board Approved</label>
    <type>Checkbox</type>
</CustomField>