force-app/main/default/objects/Capital_Requests__c/fields/BU_Asset_Location__c.field-meta.xml
<CustomField>
    <fullName>BU_Asset_Location__c</fullName>
    <description>Physical business unit location where the assets are located.</description>
    <inlineHelpText>Physical business unit location where the assets are located.</inlineHelpText>
    <label>BU/Cost Center Asset Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>