force-app/main/default/objects/Capital_Requests__c/fields/BU_Instructions__c.field-meta.xml
<CustomField>
    <fullName>BU_Instructions__c</fullName>
    <label>BU Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>