force-app/main/default/objects/Capital_Requests__c/fields/Building_Improvemented_Needed__c.field-meta.xml
<CustomField>
    <fullName>Building_Improvemented_Needed__c</fullName>
    <description>Does project involve building improvements?</description>
    <inlineHelpText>Does project involve building improvements?</inlineHelpText>
    <label>Are Building Improvements Needed?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>