force-app/main/default/objects/Capital_Requests__c/fields/Business_Finance_Director__c.field-meta.xml
<CustomField>
    <fullName>Business_Finance_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lease Approval (Up to $100K)</inlineHelpText>
    <label>Finance Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Capital_Requestsrj9T</relationshipName>
    <type>Lookup</type>
</CustomField>