force-app/main/default/objects/Capital_Requests__c/fields/Business_Segment__c.field-meta.xml
<CustomField>
    <fullName>Business_Segment__c</fullName>
    <label>Business Segment</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>DivisionBS__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Acton</fullName>
            </value>
            <value>
                <fullName>Allen</fullName>
            </value>
            <value>
                <fullName>ASEANNA</fullName>
            </value>
            <value>
                <fullName>Aspen</fullName>
                <label>Aspen Surgical</label>
            </value>
            <value>
                <fullName>Australia / NZ</fullName>
            </value>
            <value>
                <fullName>Batesville</fullName>
            </value>
            <value>
                <fullName>Belgium</fullName>
            </value>
            <value>
                <fullName>Benelux</fullName>
            </value>
            <value>
                <fullName>Brazil</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>Care Comm</fullName>
            </value>
            <value>
                <fullName>Cary</fullName>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>CMO</fullName>
            </value>
            <value>
                <fullName>Columbia</fullName>
            </value>
            <value>
                <fullName>CSS</fullName>
            </value>
            <value>
                <fullName>DACH</fullName>
            </value>
            <value>
                <fullName>Eastern Europe &amp; CIS</fullName>
            </value>
            <value>
                <fullName>Excelcare</fullName>
            </value>
            <value>
                <fullName>Field Service</fullName>
            </value>
            <value>
                <fullName>FLC - RH</fullName>
            </value>
            <value>
                <fullName>FLC - Welch Allyn</fullName>
            </value>
            <value>
                <fullName>France</fullName>
            </value>
            <value>
                <fullName>Germany</fullName>
            </value>
            <value>
                <fullName>Global Admin</fullName>
            </value>
            <value>
                <fullName>Gulf</fullName>
            </value>
            <value>
                <fullName>Iberia</fullName>
            </value>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Italy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>