force-app/main/default/objects/Capital_Requests__c/fields/Capital_Sales_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Capital_Sales_Tax_Amount__c</fullName>
    <formula>Total_Capital_Requested__c  -  Capital_SubTotal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Capital Sales Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>