force-app/main/default/objects/Capital_Requests__c/fields/Capital_SubTotal__c.field-meta.xml
<CustomField>
    <fullName>Capital_SubTotal__c</fullName>
    <label>Capital Sub-Total</label>
    <summarizedField>Capital_Iem__c.Total_for_Rollup_without_tax__c</summarizedField>
    <summaryForeignKey>Capital_Iem__c.Capital_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>