force-app/main/default/objects/Capital_Requests__c/fields/Capital_Supplemental_Amount__c.field-meta.xml
<CustomField>
    <fullName>Capital_Supplemental_Amount__c</fullName>
    <label>Capital Supplemental Amount</label>
    <summarizedField>Capital_Iem__c.Supplemental_with_Tax__c</summarizedField>
    <summaryFilterItems>
        <field>Capital_Iem__c.Is_Supplemental__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Capital_Iem__c.Capital_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>