force-app/main/default/objects/Capital_Requests__c/fields/CBI_Number__c.field-meta.xml
<CustomField>
    <fullName>CBI_Number__c</fullName>
    <description>CBI number assigned during the planning process</description>
    <inlineHelpText>See the budget manager or your financial analyst for this number</inlineHelpText>
    <label>CBI Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>