force-app/main/default/objects/Capital_Requests__c/fields/CEO__c.field-meta.xml
<CustomField>
    <fullName>CEO__c</fullName>
    <defaultValue>&quot;John Groetelaars&quot;</defaultValue>
    <description>CEO Approver</description>
    <inlineHelpText>Capital Approval ($5M - $10M)
Lease Approval  ($5M - $10M)</inlineHelpText>
    <label>CEO</label>
    <length>50</length>
    <type>Text</type>
</CustomField>