force-app/main/default/objects/Capital_Requests__c/fields/CFO__c.field-meta.xml
<CustomField>
    <fullName>CFO__c</fullName>
    <defaultValue>&quot;Barbara Bodem&quot;</defaultValue>
    <description>CFO Approver</description>
    <inlineHelpText>Capital Approval ($2M - $5M)
Lease Approval ($2M - $5M)</inlineHelpText>
    <label>CFO</label>
    <length>50</length>
    <type>Text</type>
</CustomField>