force-app/main/default/objects/Capital_Requests__c/fields/CFR_Class__c.field-meta.xml
<CustomField>
    <fullName>CFR_Class__c</fullName>
    <label>CFR Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Rental</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>