force-app/main/default/objects/Capital_Requests__c/fields/CFR_is_Confidential__c.field-meta.xml
<CustomField>
    <fullName>CFR_is_Confidential__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check to keep this CFR Confidential</description>
    <inlineHelpText>Check to keep this CFR Confidential</inlineHelpText>
    <label>CFR is Confidential</label>
    <type>Checkbox</type>
</CustomField>