force-app/main/default/objects/Capital_Requests__c/fields/CFR_Is_Confidential_Text__c.field-meta.xml
<CustomField>
    <fullName>CFR_Is_Confidential_Text__c</fullName>
    <formula>IF(CFR_is_Confidential__c = TRUE, &apos;TRUE&apos;, &apos;FALSE&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CFR Is Confidential (Text)</label>
    <type>Text</type>
</CustomField>