force-app/main/default/objects/Capital_Requests__c/fields/CFR_Lease_Number__c.field-meta.xml
<CustomField>
    <fullName>CFR_Lease_Number__c</fullName>
    <label>CFR Lease Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>