force-app/main/default/objects/Capital_Requests__c/fields/COO__c.field-meta.xml
<CustomField>
    <fullName>COO__c</fullName>
    <defaultValue>&quot;Steve Strobel&quot;</defaultValue>
    <description>COO Approver</description>
    <inlineHelpText>Approval Level: 1M-5M</inlineHelpText>
    <label>COO</label>
    <length>50</length>
    <type>Text</type>
</CustomField>