force-app/main/default/objects/Capital_Requests__c/fields/CountVal__c.field-meta.xml
<CustomField>
    <fullName>CountVal__c</fullName>
    <label>CountVal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>