force-app/main/default/objects/Capital_Requests__c/fields/current_approver_of_CFR__c.field-meta.xml
<CustomField>
    <fullName>current_approver_of_CFR__c</fullName>
    <label>CFR Current Approver</label>
    <length>100</length>
    <type>Text</type>
</CustomField>