force-app/main/default/objects/Capital_Requests__c/fields/Customs_Description__c.field-meta.xml
<CustomField>
    <fullName>Customs_Description__c</fullName>
    <defaultValue>&quot;For the following questions, merchandise is defined as material, parts, finished or partial product, production equipment, fixtures, test equipment, machinery, molds, tools, and/or dies.&quot;</defaultValue>
    <description>For the following questions, merchandise is defined as material, parts, finished or partial product, production equipment, fixtures, test equipment, machinery, molds, tools, and/or dies.</description>
    <label>Customs Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>