force-app/main/default/objects/Capital_Requests__c/fields/Date_of_first__c.field-meta.xml
<CustomField>
    <fullName>Date_of_first__c</fullName>
    <description>The date you expect the first expense to occur</description>
    <inlineHelpText>The date you expect the first expense to occur</inlineHelpText>
    <label>First Expenditure Date</label>
    <type>Date</type>
</CustomField>