force-app/main/default/objects/Capital_Requests__c/fields/DateHelper__c.field-meta.xml
<CustomField>
    <fullName>DateHelper__c</fullName>
    <formula>Submit_for_Approval_Date__c-0.04145</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DateHelper</label>
    <type>DateTime</type>
</CustomField>