force-app/main/default/objects/Capital_Requests__c/fields/Deferring_OneYr__c.field-meta.xml
<CustomField>
    <fullName>Deferring_OneYr__c</fullName>
    <label>The effect of deferring one year?</label>
    <length>50</length>
    <type>Text</type>
</CustomField>