force-app/main/default/objects/Capital_Requests__c/fields/Depreciation_BU__c.field-meta.xml
<CustomField>
    <fullName>Depreciation_BU__c</fullName>
    <description>Business Unit that absorbs the depreciation expense.</description>
    <inlineHelpText>Business Unit that absorbs the depreciation expense.</inlineHelpText>
    <label>BU Depreciation/Cost Center</label>
    <length>255</length>
    <type>Text</type>
</CustomField>