force-app/main/default/objects/Capital_Requests__c/fields/Depreciation_Expense_CHG_JDE_BU_pcn__c.field-meta.xml
<CustomField>
    <fullName>Depreciation_Expense_CHG_JDE_BU_pcn__c</fullName>
    <description>What is the Depreciation Expense</description>
    <inlineHelpText>What is the Depreciation Expense</inlineHelpText>
    <label>Depreciation Expense CHG (JDE BU)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>