force-app/main/default/objects/Capital_Requests__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acute Care</fullName>
            </value>
            <value>
                <fullName>Allen Medical</fullName>
            </value>
            <value>
                <fullName>CWS</fullName>
            </value>
            <value>
                <fullName>Extended Care</fullName>
            </value>
            <value>
                <fullName>Functional</fullName>
            </value>
            <value>
                <fullName>HGS</fullName>
            </value>
            <value>
                <fullName>Home Care</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>International-Montpelier-GSC</fullName>
            </value>
            <value>
                <fullName>International-Pluvigner-GSC</fullName>
            </value>
            <value>
                <fullName>Operations - Manufacturing</fullName>
            </value>
            <value>
                <fullName>Operations - PC&amp;L</fullName>
            </value>
            <value>
                <fullName>Operations - PD</fullName>
            </value>
            <value>
                <fullName>Operations - Shared Service</fullName>
            </value>
            <value>
                <fullName>Operations - Sourcing</fullName>
            </value>
            <value>
                <fullName>Vest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>