force-app/main/default/objects/Capital_Requests__c/fields/Divisional_ELT__c.field-meta.xml
<CustomField>
    <fullName>Divisional_ELT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Capital &amp; Lease Approval - ($500K - $1M)</inlineHelpText>
    <label>Divisional ELT</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Capital_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>