force-app/main/default/objects/Capital_Requests__c/fields/DivisionBS__c.field-meta.xml
<CustomField>
    <fullName>DivisionBS__c</fullName>
    <label>GBU</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>US PSS</fullName>
            </value>
            <value>
                <fullName>LatAm</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>GSS</fullName>
            </value>
            <value>
                <fullName>FLC</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>GSC</fullName>
            </value>
            <value>
                <fullName>R&amp;D</fullName>
            </value>
            <value>
                <fullName>Functional Areas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>