force-app/main/default/objects/Capital_Requests__c/fields/Does_project_require_IT_asset_purc__c.field-meta.xml
<CustomField>
    <fullName>Does_project_require_IT_asset_purc__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For CIO Approval</description>
    <inlineHelpText>Does this project require an IT asset?</inlineHelpText>
    <label>Does project require IT asset purchase?</label>
    <type>Checkbox</type>
</CustomField>