force-app/main/default/objects/Capital_Requests__c/fields/ERP_CFR_Number_pcn__c.field-meta.xml
<CustomField>
    <fullName>ERP_CFR_Number_pcn__c</fullName>
    <formula>JDE_CFR_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ERP CFR Number</label>
    <type>Text</type>
</CustomField>