force-app/main/default/objects/Capital_Requests__c/fields/Estimated_complet__c.field-meta.xml
<CustomField>
    <fullName>Estimated_complet__c</fullName>
    <description>Date you expect the project to complete</description>
    <inlineHelpText>Date you expect the project to complete</inlineHelpText>
    <label>Estimated Completion Date</label>
    <type>Date</type>
</CustomField>