force-app/main/default/objects/Capital_Requests__c/fields/Estimated_Project_Length__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Project_Length__c</fullName>
    <description>Estimated Project Length in (Months)</description>
    <inlineHelpText>Estimated Project Length in (Months)</inlineHelpText>
    <label>Estimated Project Length</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&lt;1 Month</fullName>
            </value>
            <value>
                <fullName>2 Months</fullName>
            </value>
            <value>
                <fullName>3 Months</fullName>
            </value>
            <value>
                <fullName>4 Months</fullName>
            </value>
            <value>
                <fullName>5 Months</fullName>
            </value>
            <value>
                <fullName>6 Months</fullName>
            </value>
            <value>
                <fullName>7 Months</fullName>
            </value>
            <value>
                <fullName>8 Months</fullName>
            </value>
            <value>
                <fullName>9 Months</fullName>
            </value>
            <value>
                <fullName>10 Months</fullName>
            </value>
            <value>
                <fullName>11 Months</fullName>
            </value>
            <value>
                <fullName>12 Months</fullName>
            </value>
            <value>
                <fullName>13 Months</fullName>
            </value>
            <value>
                <fullName>14 Months</fullName>
            </value>
            <value>
                <fullName>15 Months</fullName>
            </value>
            <value>
                <fullName>16 Months</fullName>
            </value>
            <value>
                <fullName>17 Months</fullName>
            </value>
            <value>
                <fullName>18 Months</fullName>
            </value>
            <value>
                <fullName>19 Months</fullName>
            </value>
            <value>
                <fullName>20 Months</fullName>
            </value>
            <value>
                <fullName>21 Months</fullName>
            </value>
            <value>
                <fullName>22 Months</fullName>
            </value>
            <value>
                <fullName>23 Months</fullName>
            </value>
            <value>
                <fullName>24 Months</fullName>
            </value>
            <value>
                <fullName>&gt;24 Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>