force-app/main/default/objects/Capital_Requests__c/fields/Executive_Summary__c.field-meta.xml
<CustomField>
    <fullName>Executive_Summary__c</fullName>
    <inlineHelpText>You can copy and paste text and add an image to create a master summary.</inlineHelpText>
    <label>Executive Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>