force-app/main/default/objects/Capital_Requests__c/fields/Expense_Sales_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Expense_Sales_Tax_Amount__c</fullName>
    <formula>Total_Expense_Requested__c - Expense_Sub_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expense Sales Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>