force-app/main/default/objects/Capital_Requests__c/fields/Expense_Sub_Total__c.field-meta.xml
<CustomField>
    <fullName>Expense_Sub_Total__c</fullName>
    <label>Expense Sub-Total</label>
    <summarizedField>Expense_Item__c.Total_for_Rollup_without_tax__c</summarizedField>
    <summaryForeignKey>Expense_Item__c.Capital_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>