force-app/main/default/objects/Capital_Requests__c/fields/Expense_Supplemental_Amount__c.field-meta.xml
<CustomField>
    <fullName>Expense_Supplemental_Amount__c</fullName>
    <label>Expense Supplemental Amount</label>
    <summarizedField>Expense_Item__c.Supplemental_with_Tax__c</summarizedField>
    <summaryFilterItems>
        <field>Expense_Item__c.Is_Supplemental__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Expense_Item__c.Capital_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>