force-app/main/default/objects/Capital_Requests__c/fields/Facilities__c.field-meta.xml
<CustomField>
    <fullName>Facilities__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facilities</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Capital_Requestsrj9s</relationshipName>
    <type>Lookup</type>
</CustomField>