force-app/main/default/objects/Capital_Requests__c/fields/Facilities_Impact__c.field-meta.xml
<CustomField>
    <fullName>Facilities_Impact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Does project require Facilities Change?</label>
    <type>Checkbox</type>
</CustomField>