force-app/main/default/objects/Capital_Requests__c/fields/Finance__c.field-meta.xml
<CustomField>
    <fullName>Finance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finance</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Capital_Requestsricy</relationshipName>
    <type>Lookup</type>
</CustomField>