force-app/main/default/objects/Capital_Requests__c/fields/Finance_Division_Lead__c.field-meta.xml
<CustomField>
    <fullName>Finance_Division_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Capital &amp; Lease Approval - (Up to $100K)</inlineHelpText>
    <label>Finance Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Capital_RequestsdVJM</relationshipName>
    <type>Lookup</type>
</CustomField>