force-app/main/default/objects/Capital_Requests__c/fields/Finance_Executive_Director__c.field-meta.xml
<CustomField>
    <fullName>Finance_Executive_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Capital &amp; Lease Approval - ($100k - $250K)</inlineHelpText>
    <label>Finance Executive Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Capital_Requests8</relationshipName>
    <type>Lookup</type>
</CustomField>