force-app/main/default/objects/Capital_Requests__c/fields/Finance_Lead__c.field-meta.xml
<CustomField>
    <fullName>Finance_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Capital &amp; Lease Approval - ($250K - $500K)</inlineHelpText>
    <label>Finance VP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Capital_RequestsrjI6</relationshipName>
    <type>Lookup</type>
</CustomField>