force-app/main/default/objects/Capital_Requests__c/fields/Financial_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Financial_Analyst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Add the appropriate Financial Analyst for your Business.</description>
    <inlineHelpText>Add the appropriate Financial Analyst for your Business.</inlineHelpText>
    <label>Financial Analyst</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Capital_RequestszsQe</relationshipName>
    <type>Lookup</type>
</CustomField>