force-app/main/default/objects/Capital_Requests__c/fields/Financial_Approver__c.field-meta.xml
<CustomField>
    <fullName>Financial_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Financial Approver is populated based on $ value from table maintained by Fixed Asset Team</description>
    <label>Financial Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Capital_RequestsqYch</relationshipName>
    <type>Lookup</type>
</CustomField>