force-app/main/default/objects/Capital_Requests__c/fields/Fixed_Assets_Group__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Assets_Group__c</fullName>
    <defaultValue>&quot;Scot Harmeyer/Kevin Bryan Gomez&quot;</defaultValue>
    <description>Fixed Assets Approval Group
Scot Harmeyer/Kevin Bryan Gomez</description>
    <inlineHelpText>Fixed Assets Approval Group
Scot Harmeyer/Kevin Bryan Gomez</inlineHelpText>
    <label>Fixed Assets Group</label>
    <length>50</length>
    <type>Text</type>
</CustomField>