force-app/main/default/objects/Capital_Requests__c/fields/Fixed_Assets_WA__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Assets_WA__c</fullName>
    <defaultValue>&quot;Randy Cook/Kyle Nunziato&quot;</defaultValue>
    <description>Fixed Assets Approval Group for Welch Allyn
Randy Cook/Kyle Nunziato</description>
    <inlineHelpText>Fixed Assets Approval Group for Welch Allyn
Randy Cook/Kyle Nunziato</inlineHelpText>
    <label>WA Fixed Assets</label>
    <length>50</length>
    <type>Text</type>
</CustomField>