force-app/main/default/objects/Capital_Requests__c/fields/FP_A__c.field-meta.xml
<CustomField>
    <fullName>FP_A__c</fullName>
    <defaultValue>&quot;Jason Richardson&quot;</defaultValue>
    <inlineHelpText>Capital &amp; Lease Approval - ($1M - $5M)</inlineHelpText>
    <label>FP&amp;A</label>
    <length>50</length>
    <type>Text</type>
</CustomField>