force-app/main/default/objects/Capital_Requests__c/fields/Functional_Executive_Director__c.field-meta.xml
<CustomField>
    <fullName>Functional_Executive_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Capital &amp; Lease Approval - ($100K to $250K)</inlineHelpText>
    <label>Functional Executive Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Capital_Requests9</relationshipName>
    <type>Lookup</type>
</CustomField>