force-app/main/default/objects/Capital_Requests__c/fields/Functional_Manager__c.field-meta.xml
<CustomField>
    <fullName>Functional_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Capital &amp; Lease Approval - ($250K - $500K)</inlineHelpText>
    <label>Functional VP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Capital_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>