force-app/main/default/objects/Capital_Requests__c/fields/If_Tooling_add_Vendor_Address__c.field-meta.xml
<CustomField>
    <fullName>If_Tooling_add_Vendor_Address__c</fullName>
    <description>If Tooling is needed, please add vendor name and location (address) where tooling resides.</description>
    <inlineHelpText>If Tooling is needed, please add vendor name and location (address) where tooling resides.</inlineHelpText>
    <label>If Tooling requested add Vendor&amp;Address</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>