force-app/main/default/objects/Capital_Requests__c/fields/InitiateAutoApproveProcess__c.field-meta.xml
<CustomField>
    <fullName>InitiateAutoApproveProcess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>InitiateAutoApproveProcess</label>
    <type>Checkbox</type>
</CustomField>