force-app/main/default/objects/Capital_Requests__c/fields/Internal_Resources__c.field-meta.xml
<CustomField>
    <fullName>Internal_Resources__c</fullName>
    <label>Internal Resources</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>